<project>
    <parent>
        <groupId>io.teknek.deliverance</groupId>
        <artifactId>deliverance-parent</artifactId>
        <version>0.0.11</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <artifactId>web</artifactId>
    <name>web</name>
    <properties>
        <!--
        <maven.compiler.source>24</maven.compiler.source>
        <maven.compiler.target>24</maven.compiler.target>
        <maven.compiler.release>24</maven.compiler.release>
        -->
        <build.plugins.plugin.version>3.5.3</build.plugins.plugin.version>
        <guava.version>32.0.1-jre</guava.version>

        <jafama.version>2.3.2</jafama.version>
        <jcttools.version>4.0.1</jcttools.version>

        <spring-boot.version>4.1.0</spring-boot.version>
        <jakarta.ws.rs-api.version>3.1.0</jakarta.ws.rs-api.version>
        <spring-boot.run.jvmArguments>--add-modules jdk.incubator.vector</spring-boot.run.jvmArguments>
        <jwt.version>0.13.0</jwt.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <type>pom</type>
                <version>${spring-boot.version}</version>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-api</artifactId>
            <version>${jwt.version}</version>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-impl</artifactId>
            <version>${jwt.version}</version>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-jackson</artifactId>
            <version>${jwt.version}</version>
        </dependency>
        <dependency>
            <groupId>io.teknek.deliverance</groupId>
            <artifactId>core</artifactId>
            <version>${project.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-simple</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>io.teknek.dysfx</groupId>
            <artifactId>core</artifactId>
            <version>${dysfx.version}</version>
        </dependency>
        <dependency>
            <groupId>io.teknek.deliverance</groupId>
            <artifactId>native</artifactId>
            <version>${project.version}</version>
            <classifier>${os.detected.name}-${os.detected.arch}</classifier>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-simple</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j-api.version}</version>
        </dependency>
        <dependency>
            <groupId>io.dropwizard.metrics</groupId>
            <artifactId>metrics-core</artifactId>
            <version>${metrics.version}</version>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- Use generated client for end-to-end tests -->
        <dependency>
            <groupId>io.teknek.deliverance</groupId>
            <artifactId>client</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.teknek.deliverance</groupId>
            <artifactId>nanocode-deliverance</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-logging</artifactId>
        </dependency>

        <dependency>
            <groupId>jakarta.ws.rs</groupId>
            <artifactId>jakarta.ws.rs-api</artifactId>
            <version>${jakarta.ws.rs-api.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webmvc-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>25</release>
                    <jdkToolchain>
                        <version>25</version>
                    </jdkToolchain>
                    <compilerArgs>
                        <arg>--add-modules</arg>
                        <arg>jdk.incubator.vector</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.version}</version>
                <configuration>
                    <argLine>
                        --add-opens java.base/java.nio=ALL-UNNAMED
                        --add-modules jdk.incubator.vector
                        -Djdk.attach.allowAttachSelf=true
                        -Djava.library.path=${build.directory}/../../native/target/native-lib-only/${os.detected.classifier}
                    </argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.openapitools</groupId>
                <artifactId>openapi-generator-maven-plugin</artifactId>
                <version>${openapi.generator.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <inputSpec>${project.basedir}/deliverance_specification.yaml</inputSpec>
                            <generatorName>java</generatorName>
                            <library>jersey3</library>
                            <skipValidateSpec>true</skipValidateSpec>
                            <generateApis>false</generateApis>
                            <generateSupportingFiles>true</generateSupportingFiles>
                            <supportingFilesToGenerate>ApiException.java,JSON.java,RFC3339DateFormat.java,RFC3339InstantDeserializer.java,RFC3339JavaTimeModule.java,AbstractOpenApiSchema.java</supportingFilesToGenerate>
                            <generateModelTests>false</generateModelTests>
                            <apiPackage>io.teknek.deliverance.api</apiPackage>
                            <modelPackage>io.teknek.deliverance.model</modelPackage>
                            <output>${project.build.directory}/generated-sources/openapi</output>
                            <configOptions>
                                <useTags>true</useTags>
                                <useBeanValidation>false</useBeanValidation>
                                <hideGenerationTimestamp>true</hideGenerationTimestamp>
                                <performBeanValidation>false</performBeanValidation>
                                <useJakartaEe>true</useJakartaEe>
                                <useJackson3>true</useJackson3>
                                <useOneOfDiscriminatorLookup>true</useOneOfDiscriminatorLookup>
                                <openApiNullable>false</openApiNullable>
                                <useOptional>true</useOptional>
                                <containerDefaultToNull>true</containerDefaultToNull>
                                <serializationLibrary>jackson</serializationLibrary>
                                <generateAliasAsModel>true</generateAliasAsModel>
                                <interfaceOnly>true</interfaceOnly>
                                <generateBuilders>true</generateBuilders>
                                <skipDefaultInterface>true</skipDefaultInterface>
                                <documentationProvider>none</documentationProvider>
                                <sourceFolder>java/main</sourceFolder>
                            </configOptions>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>
</project>  
